# khmer-nlp

./: LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
src/khmernlp/tokenizer/: tokenizer.py
src/tokenizer/: readme.md  tokenizer.py
